--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
-teamA=examplefuncsplayer
-teamB=examplefuncsplayer
-maps=maptestsmall
+teamA=julianbot
+teamB=shootPlayer
+maps=CentralLake
 source=src
 gpr.user=battlecodedownloadpackage
