--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
 teamA=julianbot
-teamB=shootPlayer
-maps=CentralLake
+teamB=clonebot
+maps=FourLakeLand
 source=src
 gpr.user=battlecodedownloadpackage
