New check to decodeMessage. Checks if matches one of the defined categories.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
 teamA=julianbot
-teamB=clonebot
-maps=FourLakeLand
+teamB=lectureplayer
+maps=CentralSoup
 source=src
 gpr.user=battlecodedownloadpackage
