--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
 teamA=julianbot
 teamB=lectureplayer
-maps=CosmicBackgroundRadiation
+maps=Spiral
 source=src
 gpr.user=battlecodedownloadpackage
